@@ -372,7 +372,7 @@ A:hover	{ color: #C51B1B; }
     background-color: #909090;
 }
 	
-.popuphead  /* controls the title and background */ 
+.popuphead, .separator  /* controls the title and background */ 
 {
     margin: 0px; padding:0px;
     background-image: url(../images/navbar.jpg);
@@ -417,4 +417,12 @@ A:hover	{ color: #C51B1B; }
 
 #adminbox {
     color: #000000;
+}
+
+.tab {
+    color: #c0c0c0;
+}
+
+.tab-hi {
+    background-color: #c0c0c0; color: #000000;
 }
